# PaintWithCV2

./: main.py  pyproject.toml
core/: app.py
core/managers/: base_manager.py  canvas_manager.py  tool_manager.py  ui_manager.py
tools/: base_tool.py  circle_tool.py  ellipse_tool.py  line_tool.py  rectangle_tool.py
ui/: core.py
ui/components/: __init__.py  button.py  group.py
